# engineer24

./: CMakeLists.txt  README.md
bash/: camera.sh
config/basement/: aided_exchange_camera_param.yaml  serial_port_param.yaml
src/camera/: CMakeLists.txt
src/camera/include/: uvc_camera.h  uvc_camera_data.h  uvc_camera_hardware_param.h  uvc_camera_model_param.h  uvc_camera_param.h  uvc_camera_runtime_param.h
src/camera/src/: uvc_camera.cpp  uvc_camera_data.cpp  uvc_camera_hardware_param.cpp  uvc_camera_model_param.cpp  uvc_camera_param.cpp  uvc_camera_runtime_param.cpp
src/camera/test/: test_uvc_camera_offline.cpp  test_uvc_camera_online.cpp  test_uvc_camera_param.cpp  test_uvc_camera_reconnect.cpp  test_uvc_camera_switch_hardware_param.cpp
src/logger/: CMakeLists.txt
src/logger/include/: easy_logger.h  easy_logger_param.h
src/logger/include/spdlog/: logger-inl.h  spdlog.h
src/logger/include/spdlog/fmt/bundled/: format-inl.h
src/logger/src/: easy_logger.cpp  easy_logger_param.cpp
src/logger/test/: test_easy_logger.cpp  test_spdlog.cpp
src/src/: CMakeLists.txt
src/src/include/: recognize.h
src/src/src/: recognize.cpp
src/src/test/: test1.cpp
src/uart/: CMakeLists.txt
src/uart/include/: serial_port.h  serial_port_param.h
src/uart/src/: serial_port.cpp  serial_port_param.cpp
src/uart/test/: test_serial_port.cpp  test_serial_port_param.cpp
